Removed unwanted data and cleaned the data.

--- a/06 Bayes Classifier.ipynb
+++ b/06 Bayes Classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 108,
    "id": "9672be65",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 109,
    "id": "204a5b45",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 110,
    "id": "00c5c3de",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 111,
    "id": "b92acc11",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
        "'utf-8'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 112,
    "id": "854592aa",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 113,
    "id": "2dbbf5e7",
    "metadata": {},
    "outputs": [],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 114,
    "id": "4c59d188",
    "metadata": {},
    "outputs": [
@@ -264,13 +264,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0->1->4->9->16->"
+      "0 - 1 - 4 - 9 - 16 - "
      ]
     }
    ],
    "source": [
     "for i in generate_squares(5):\n",
-    "    print(i, end='->')"
+    "    print(i, end=' - ')"
    ]
   },
   {
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 115,
    "id": "52413998",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 116,
    "id": "d636c79d",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 117,
    "id": "0653ceaf",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "00033.9babb58d9298daa2963d4f514193d7d6  This is the bottom line.  If you can GIVE AWAY...  "
       ]
      },
-     "execution_count": 110,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 118,
    "id": "fe86c100",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "(1898, 2)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 119,
    "id": "6b43afd1",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
        "00357.d559b71616f64ba1d1c1e61a03644fd4  At 10:34 AM -0700 on 8/28/02, Jim Whitehead wr...  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 120,
    "id": "bcfd1668",
    "metadata": {},
    "outputs": [
@@ -538,7 +538,7 @@
        "(3901, 2)"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 121,
    "id": "96567b91",
    "metadata": {},
    "outputs": [
@@ -631,7 +631,7 @@
        "00033.9babb58d9298daa2963d4f514193d7d6  This is the bottom line.  If you can GIVE AWAY...  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 122,
    "id": "13050334",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,535 @@
        "00747.352d424267d36975a7b40b85ffd0885e  If you run Pick, and then use the \"New FTOC\" b...  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04ff87e5",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning: Checking for missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "c2b195e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if any message bodies are null\n",
+    "\n",
+    "data['MESSAGE'].isnull().values.any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "id": "9d40355a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(\"\")\n",
+    "len(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "id": "8c22bb56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NoneType"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_var = None\n",
+    "type(my_var)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "id": "cc55357f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check if there are empty emails. (String length zero)\n",
+    "(data.MESSAGE.str.len() == 0).any()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "a64ac732",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(data.MESSAGE.str.len() == 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "68647115",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Challange checking how many null values.\n",
+    "\n",
+    "#(data.MESSAGE.str.len() == None).any()\n",
+    "data['MESSAGE'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3ccc82c",
+   "metadata": {},
+   "source": [
+    "## Locating empty emails"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "a9632b9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(data.MESSAGE.str.len() == 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "5c9f9c9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cmds', 'cmds', 'cmds'], dtype='object')"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data.MESSAGE.str.len()==0].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "2c38ef9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False, ..., False, False, False])"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.index.get_loc('cmds')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62d5896e",
+   "metadata": {},
+   "source": [
+    "## Remove System File Entries from DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "bfe8d4d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#data = data.drop(['cmds'])\n",
+    "#Same thing\n",
+    "#data.drop(['cmds'], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "14cfe7e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5799, 2)"
+      ]
+     },
+     "execution_count": 133,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "87b42d7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['cmds', 'cmds', 'cmds'], dtype='object')"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data.MESSAGE.str.len()==0].index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03f73ba7",
+   "metadata": {},
+   "source": [
+    "## Add documetn IDs to Track emails in Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "a517d965",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "document_ids = range(0, len(data.index))\n",
+    "data['DOC_ID'] = document_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "3771a5c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "00249.5f45607c1bffe89f60ba1ec9f878039a       0\n",
+       "00373.ebe8670ac56b04125c25100a36ab0510       1\n",
+       "00214.1367039e50dc6b7adb0f2aa8aba83216       2\n",
+       "00210.050ffd105bd4e006771ee63cabc59978       3\n",
+       "00033.9babb58d9298daa2963d4f514193d7d6       4\n",
+       "                                          ... \n",
+       "00609.dd49926ce94a1ea328cce9b62825bc97    5794\n",
+       "00957.e0b56b117f3ec5f85e432a9d2a47801f    5795\n",
+       "01127.841233b48eceb74a825417d8d918abf8    5796\n",
+       "01178.5c977dff972cd6eef64d4173b90307f0    5797\n",
+       "00747.352d424267d36975a7b40b85ffd0885e    5798\n",
+       "Name: DOC_ID, Length: 5799, dtype: int64"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.DOC_ID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "5d19e59b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>MESSAGE</th>\n",
+       "      <th>FILE_NAME</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DOC_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...</td>\n",
+       "      <td>00249.5f45607c1bffe89f60ba1ec9f878039a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ATTENTION: This is a MUST for ALL Computer Use...</td>\n",
+       "      <td>00373.ebe8670ac56b04125c25100a36ab0510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is a multi-part message in MIME format.\\n...</td>\n",
+       "      <td>00214.1367039e50dc6b7adb0f2aa8aba83216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...</td>\n",
+       "      <td>00210.050ffd105bd4e006771ee63cabc59978</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is the bottom line.  If you can GIVE AWAY...</td>\n",
+       "      <td>00033.9babb58d9298daa2963d4f514193d7d6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CATEGORY                                            MESSAGE  \\\n",
+       "DOC_ID                                                                \n",
+       "0              1  Dear Homeowner,\\n\\n \\n\\nInterest Rates are at ...   \n",
+       "1              1  ATTENTION: This is a MUST for ALL Computer Use...   \n",
+       "2              1  This is a multi-part message in MIME format.\\n...   \n",
+       "3              1  IMPORTANT INFORMATION:\\n\\n\\n\\nThe new domain n...   \n",
+       "4              1  This is the bottom line.  If you can GIVE AWAY...   \n",
+       "\n",
+       "                                     FILE_NAME  \n",
+       "DOC_ID                                          \n",
+       "0       00249.5f45607c1bffe89f60ba1ec9f878039a  \n",
+       "1       00373.ebe8670ac56b04125c25100a36ab0510  \n",
+       "2       00214.1367039e50dc6b7adb0f2aa8aba83216  \n",
+       "3       00210.050ffd105bd4e006771ee63cabc59978  \n",
+       "4       00033.9babb58d9298daa2963d4f514193d7d6  "
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['FILE_NAME'] = data.index\n",
+    "data.set_index('DOC_ID', inplace=True)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "6df9031c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CATEGORY</th>\n",
+       "      <th>MESSAGE</th>\n",
+       "      <th>FILE_NAME</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>DOC_ID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5794</th>\n",
+       "      <td>0</td>\n",
+       "      <td>I'm one of the 30,000 but it's not working ver...</td>\n",
+       "      <td>00609.dd49926ce94a1ea328cce9b62825bc97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5795</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Damien Morton quoted:\\n\\n&gt;W3C approves HTML 4 ...</td>\n",
+       "      <td>00957.e0b56b117f3ec5f85e432a9d2a47801f</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5796</th>\n",
+       "      <td>0</td>\n",
+       "      <td>On Mon, 2002-07-22 at 06:50, che wrote:\\n\\n\\n\\...</td>\n",
+       "      <td>01127.841233b48eceb74a825417d8d918abf8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5797</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Once upon a time, Manfred wrote :\\n\\n\\n\\n&gt; I w...</td>\n",
+       "      <td>01178.5c977dff972cd6eef64d4173b90307f0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5798</th>\n",
+       "      <td>0</td>\n",
+       "      <td>If you run Pick, and then use the \"New FTOC\" b...</td>\n",
+       "      <td>00747.352d424267d36975a7b40b85ffd0885e</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        CATEGORY                                            MESSAGE  \\\n",
+       "DOC_ID                                                                \n",
+       "5794           0  I'm one of the 30,000 but it's not working ver...   \n",
+       "5795           0  Damien Morton quoted:\\n\\n>W3C approves HTML 4 ...   \n",
+       "5796           0  On Mon, 2002-07-22 at 06:50, che wrote:\\n\\n\\n\\...   \n",
+       "5797           0  Once upon a time, Manfred wrote :\\n\\n\\n\\n> I w...   \n",
+       "5798           0  If you run Pick, and then use the \"New FTOC\" b...   \n",
+       "\n",
+       "                                     FILE_NAME  \n",
+       "DOC_ID                                          \n",
+       "5794    00609.dd49926ce94a1ea328cce9b62825bc97  \n",
+       "5795    00957.e0b56b117f3ec5f85e432a9d2a47801f  \n",
+       "5796    01127.841233b48eceb74a825417d8d918abf8  \n",
+       "5797    01178.5c977dff972cd6eef64d4173b90307f0  \n",
+       "5798    00747.352d424267d36975a7b40b85ffd0885e  "
+      ]
+     },
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fc09aa1",
+   "id": "8d3d63f3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -739,7 +1267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2b195e8",
+   "id": "efa14e37",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -747,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d40355a",
+   "id": "58c61d62",
    "metadata": {},
    "outputs": [],
    "source": []
