--- a/06 Bayes Classifier.ipynb
+++ b/06 Bayes Classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 1,
    "id": "9672be65",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "id": "204a5b45",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "id": "00c5c3de",
    "metadata": {},
    "outputs": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "b92acc11",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "'utf-8'"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "id": "854592aa",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "2dbbf5e7",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "4c59d188",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 8,
    "id": "52413998",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 9,
    "id": "d636c79d",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
    "id": "0653ceaf",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "00033.9babb58d9298daa2963d4f514193d7d6  This is the bottom line.  If you can GIVE AWAY...  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "id": "fe86c100",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
        "(1898, 2)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 12,
    "id": "6b43afd1",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
        "00357.d559b71616f64ba1d1c1e61a03644fd4  At 10:34 AM -0700 on 8/28/02, Jim Whitehead wr...  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 13,
    "id": "bcfd1668",
    "metadata": {},
    "outputs": [
@@ -548,7 +548,7 @@
        "(3901, 2)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "id": "96567b91",
    "metadata": {},
    "outputs": [
@@ -641,7 +641,7 @@
        "00033.9babb58d9298daa2963d4f514193d7d6  This is the bottom line.  If you can GIVE AWAY...  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "id": "13050334",
    "metadata": {
     "scrolled": true
@@ -731,7 +731,7 @@
        "00747.352d424267d36975a7b40b85ffd0885e  If you run Pick, and then use the \"New FTOC\" b...  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "id": "c2b195e8",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
        "False"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "9d40355a",
    "metadata": {},
    "outputs": [
@@ -783,7 +783,7 @@
        "0"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "id": "8c22bb56",
    "metadata": {},
    "outputs": [
@@ -805,7 +805,7 @@
        "NoneType"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "id": "cc55357f",
    "metadata": {},
    "outputs": [
@@ -827,7 +827,7 @@
        "True"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 20,
    "id": "a64ac732",
    "metadata": {},
    "outputs": [
@@ -849,7 +849,7 @@
        "3"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 21,
    "id": "68647115",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
        "0"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 22,
    "id": "a9632b9f",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
        "pandas.core.series.Series"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 23,
    "id": "5c9f9c9f",
    "metadata": {},
    "outputs": [
@@ -923,7 +923,7 @@
        "Index(['cmds', 'cmds', 'cmds'], dtype='object')"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 24,
    "id": "2c38ef9d",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
        "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "id": "bfe8d4d4",
    "metadata": {},
    "outputs": [],
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 26,
    "id": "14cfe7e8",
    "metadata": {},
    "outputs": [
@@ -985,7 +985,7 @@
        "(5796, 2)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 27,
    "id": "87b42d7d",
    "metadata": {},
    "outputs": [
@@ -1006,7 +1006,7 @@
        "Index([], dtype='object')"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 28,
    "id": "a517d965",
    "metadata": {},
    "outputs": [],
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 29,
    "id": "3771a5c6",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
        "Name: DOC_ID, Length: 5796, dtype: int64"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 30,
    "id": "5d19e59b",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1157,7 @@
        "4       00033.9babb58d9298daa2963d4f514193d7d6  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 31,
    "id": "6df9031c",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1259,7 @@
        "5795    00747.352d424267d36975a7b40b85ffd0885e  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 32,
    "id": "efa14e37",
    "metadata": {},
    "outputs": [],
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 33,
    "id": "3aaf2a69",
    "metadata": {},
    "outputs": [
@@ -1308,7 +1308,7 @@
        "Name: CATEGORY, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 34,
    "id": "abd5bff9",
    "metadata": {},
    "outputs": [],
@@ -1330,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 35,
    "id": "62b7721e",
    "metadata": {},
    "outputs": [
@@ -1356,7 +1356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 36,
    "id": "be380596",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "id": "a0c28dae",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 38,
    "id": "4402d3e4",
    "metadata": {},
    "outputs": [
@@ -1497,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 42,
    "id": "2bc8c5e6",
    "metadata": {},
    "outputs": [
@@ -1515,13 +1515,42 @@
        "True"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "nltk.download('punkt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "5c7026df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to /Users/abdul/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')"
    ]
   },
   {
@@ -1534,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 45,
    "id": "09f97a9b",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1573,7 @@
        "['all', 'work', 'an', 'no', 'play', 'makes', 'jack', 'a', 'dull', 'boy', '.']"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1559,13 +1588,124 @@
    "id": "729b3f90",
    "metadata": {},
    "source": [
-    "## Removing stopwords"
+    "## Removing Stop Words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "ba920c55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "358b87c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(stop_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "6d9bd4a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found it!\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'this' in stop_words: print('Found it!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "bf935401",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Challange: print out 'Nope. Not in here'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "0261f5a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nope. Not in here\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 'hello' not in stop_words: print('Nope. Not in here')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "72b40209",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['work', 'play', 'makes', 'jack', 'dull', 'boy', '.', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = 'All work and no play makes Jack a dull boy. To be or not to be.'\n",
+    "words = word_tokenize(msg.lower())\n",
+    "\n",
+    "filtered_words = []\n",
+    "for word in words:\n",
+    "    if word not in stop_words:\n",
+    "        filtered_words.append(word)\n",
+    "        \n",
+    "print(filtered_words)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba920c55",
+   "id": "debdc127",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "443891f4",
    "metadata": {},
    "outputs": [],
    "source": []
