--- a/06 Bayes Classifier.ipynb
+++ b/06 Bayes Classifier.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "9672be65",
    "metadata": {},
    "outputs": [],
@@ -22,6 +22,7 @@
     "\n",
     "import nltk\n",
     "from nltk.stem import PorterStemmer\n",
+    "from nltk.stem import SnowballStemmer\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
     "\n",
@@ -1497,7 +1498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "id": "2bc8c5e6",
    "metadata": {},
    "outputs": [
@@ -1515,7 +1516,7 @@
        "True"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1526,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "id": "5c7026df",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1536,7 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package stopwords to /Users/abdul/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -1544,7 +1545,7 @@
        "True"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1563,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 42,
    "id": "09f97a9b",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1574,7 @@
        "['all', 'work', 'an', 'no', 'play', 'makes', 'jack', 'a', 'dull', 'boy', '.']"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1593,7 +1594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 43,
    "id": "ba920c55",
    "metadata": {},
    "outputs": [],
@@ -1603,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 44,
    "id": "358b87c4",
    "metadata": {},
    "outputs": [
@@ -1613,7 +1614,7 @@
        "set"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 45,
    "id": "6d9bd4a5",
    "metadata": {},
    "outputs": [
@@ -1642,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 46,
    "id": "bf935401",
    "metadata": {},
    "outputs": [],
@@ -1652,7 +1653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 47,
    "id": "0261f5a0",
    "metadata": {},
    "outputs": [
@@ -1670,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 48,
    "id": "72b40209",
    "metadata": {},
    "outputs": [
@@ -1695,9 +1696,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d7650930",
+   "metadata": {},
+   "source": [
+    "## Word Stems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "877e57b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['work', 'play', 'make', 'jack', 'dull', 'boy', '.', '.', 'nobodi', 'expect', 'spanish', 'inquisit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = 'All work and no play makes Jack a dull boy. To be or not to be. \\\n",
+    "Nobody expects the spanish inquisition'\n",
+    "words = word_tokenize(msg.lower())\n",
+    "\n",
+    "\n",
+    "#stemmer = PorterStemmer()\n",
+    "stemmer = SnowballStemmer('english')\n",
+    "\n",
+    "filtered_words = []\n",
+    "for word in words:\n",
+    "    if word not in stop_words:\n",
+    "        stemmed_word = stemmer.stem(word)\n",
+    "        filtered_words.append(stemmed_word)\n",
+    "        \n",
+    "print(filtered_words)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d87914e",
+   "metadata": {},
+   "source": [
+    "## Removing punctuation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "443891f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'pmnj'.isalpha()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c8167351",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'p?j'.isalpha()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "8703701b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['work', 'play', 'make', 'jack', 'dull', 'boy', 'nobodi', 'expect', 'spanish', 'inquisit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "msg = 'All work and no play makes Jack a dull boy. To be or not to be.??? \\\n",
+    "Nobody expects the spanish inquisition'\n",
+    "words = word_tokenize(msg.lower())\n",
+    "\n",
+    "\n",
+    "#stemmer = PorterStemmer()\n",
+    "stemmer = SnowballStemmer('english')\n",
+    "\n",
+    "filtered_words = []\n",
+    "for word in words:\n",
+    "    if word not in stop_words and word.isalpha():\n",
+    "        stemmed_word = stemmer.stem(word)\n",
+    "        filtered_words.append(stemmed_word)\n",
+    "        \n",
+    "print(filtered_words)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "debdc127",
+   "id": "60ed0b36",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1705,7 +1828,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "443891f4",
+   "id": "640514c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b1d077",
    "metadata": {},
    "outputs": [],
    "source": []
