Slicing DataFrames and Creating Subsets

--- a/06 Bayes Classifier.ipynb
+++ b/06 Bayes Classifier.ipynb
@@ -2250,39 +2250,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 125,
    "id": "d94d9640",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'first_emails' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/6_/m8g672753w3d4h1dr179jv680000gn/T/ipykernel_2722/3891773865.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mMESSAGE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m11\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mnested_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfirst_emails\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclean_message\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'first_emails' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "data.MESSAGE.iloc[5:11]\n",
+    "first_emails = data.MESSAGE.iloc[0:3]\n",
     "nested_list = first_emails.apply(clean_message)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "id": "dded9b3a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "390"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# flat_list = []\n",
+    "# for sublist in nested_list:\n",
+    "#     for item in sublist:\n",
+    "#         flat_list.append(item)\n",
+    "        \n",
+    "flat_list = [item for sublist in nested_list for item in sublist]    \n",
+    "    \n",
+    "len(flat_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "id": "f5148aeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 25.6 s, sys: 115 ms, total: 25.7 s\n",
+      "Wall time: 25.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "#use apply() on all messages in the dataframe\n",
+    "nested_list = data.MESSAGE.apply(clean_message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "id": "3f699b27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DOC_ID\n",
+       "0    [dear, homeown, interest, rate, lowest, point,...\n",
+       "1    [attent, must, comput, user, packag, deal, nor...\n",
+       "2    [messag, mime, format, dare, tri, find, better...\n",
+       "3    [import, inform, new, domain, name, final, ava...\n",
+       "4    [bottom, line, give, away, cd, free, peopl, li...\n",
+       "Name: MESSAGE, dtype: object"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nested_list.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5148aeb",
+   "id": "27f7cb54",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2290,7 +2347,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f699b27",
+   "id": "9a14cea2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db0cb8e3",
    "metadata": {},
    "outputs": [],
    "source": []
